--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ header ul a{
     width: 100%;
     justify-content: center;
     mix-blend-mode: lighten;
+    z-index: -1;
 }
 
 .blackhole-box video{
@@ -158,7 +159,7 @@ header ul a{
 }
 
 .hero-info button{
-    color: white;
+    color: #727fde;
     padding: 15px 35px;
     border-radius: 10px;
     border: 1px solid #727fdeb4;
@@ -189,12 +190,12 @@ header ul a{
 
 .hero-vid-box{
     position: absolute;
-    right: 3%;
+    right: 0%;
 }
 
 .hero-vid-box video{
     height: 900px;
-    mix-blend-mode: difference;
+    mix-blend-mode: lighten;
 }
 
 .scroll-down{
@@ -241,6 +242,131 @@ header ul a{
         opacity: 0;
     }
 }
+
+.info-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 80%;
+    margin-top: 100px;
+}
+
+.section-title{
+    font-size: 40px;
+    font-weight: 700;
+}
+
+.info-cards{
+    display: grid;
+    grid-template-columns: auto auto auto;
+    gap: 20px;
+    width: 100%;
+    height: 100%;
+    margin-top: 30px;
+}
+
+.card{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    position: relative;
+    width: auto;
+    height: 40vh;
+    overflow: hidden;
+    border: 1px solid gray;
+    background-color: #080020b7;
+    border-radius: 20px; 
+    transition: 0.3s;  
+}
+
+.card:hover{
+    box-shadow: 0 0 15px rgba(211, 211, 211, 0.5);
+}
+
+.card img{
+    width: 80%;
+    height: 50%;
+    object-fit: cover;
+}
+
+.card h1{
+    position: absolute;
+    margin: 0;
+    bottom: 40%;
+    left: 5%;
+    font-size: 25px;
+    z-index: 1;
+    color: lightgray;
+}
+
+.card p{
+    position: absolute;
+    bottom: 3%;
+    left: 5%;
+    z-index: 1;
+    max-width: 300px;
+    color: gray;
+    font-size: 13px;
+    line-height: 20px;
+}
+
+.card video{
+    margin-top: 10%;
+    width: 75%;
+    height: 50%;
+    object-fit: cover;
+    mix-blend-mode: lighten;
+}
+
+.card button{
+    color: #727fde;
+    padding: 5px 15px;
+    border-radius: 10px;
+    border: 1px solid #727fdeb4;
+    background-color: #2200493d;
+    box-shadow: 0 0 5px #727fde86;
+    cursor: pointer;
+    transition: 0.3s;
+    position: absolute;
+    bottom: 5%;
+    left: 5%;
+}
+
+.card button:hover{
+    box-shadow: 0 0 20px #727fde86;
+    opacity: 0.7;
+}
+
+.card:nth-child(3){
+    grid-row: span 2;
+    height: 83vh;
+}
+.card:nth-child(3) p{
+    bottom: 12%;
+}
+
+.card:nth-child(3) h1{
+    bottom: 21%;
+}
+
+.card:nth-child(4){
+    grid-column: span 2;
+}
+
+.card:nth-child(4) p{
+    max-width: 650px;
+}
+
+.card:nth-child(3) h1{
+    bottom: 35%;
+}
+
+
+
+
+
+
+
 
 
 
