added project section

--- a/style.css
+++ b/style.css
@@ -289,6 +289,12 @@ header ul a{
     object-fit: cover;
 }
 
+.card:first-child img{
+    width: auto;
+    border-radius: 10px;
+    margin: 5px;
+}
+
 .card h1{
     position: absolute;
     margin: 0;
@@ -360,6 +366,145 @@ header ul a{
 .card:nth-child(3) h1{
     bottom: 35%;
 }
+
+
+.my-projects{
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
+    position: relative;
+    width: 80%;
+    height: 100vh;
+    margin-top: 200px;
+    margin-bottom: 700px;
+}
+
+.project-card{
+    display: flex;
+    width: 100%;
+    height: 40%;
+    align-items: center;
+    gap: 10%;
+    justify-content: center;
+}
+
+.project-vidbox{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    position: relative;
+    cursor: pointer;
+    min-height: 400px;
+    transition: 0.5s;
+    mix-blend-mode: exclusion;
+}
+
+.project-vidbox video{
+    object-fit: cover;
+    width: 100%;
+    box-shadow: 0 0 10px lightgray;
+    border-radius: 20px;
+    transition: 0.5s;
+}
+
+.project-vidbox video:hover{
+    box-shadow: 0 0 20px lightgray;
+}
+
+.project-info{
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: center;
+    width: 50%;
+    padding-left: 10%;
+}
+
+.project-button{
+    display: flex;
+    gap: 3%;
+}
+
+.project-info h1{
+    width: 90%;
+    font-size: 25px;
+    font-weight: bold;
+    text-wrap: nowrap;
+    margin-top: 0;
+    margin-bottom: 10px;
+    max-width: 450px;
+}
+
+.project-info p{
+    width: 90%;
+    min-width: 300px;
+    max-width: 400px;
+    margin-top: 0;
+}
+
+.project-info button{
+    color: #727fde;
+    padding: 10px 15px;
+    border-radius: 10px;
+    border: 1px solid #727fdeb4;
+    background-color: #2200493d;
+    box-shadow: 0 0 5px #727fde86;
+    cursor: pointer;
+    transition: 0.3s;
+} 
+
+.project-info button:hover{
+    box-shadow: 0 0 20px #727fde86;
+    opacity: 0.7;
+}
+
+.hover-sign{
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30%;
+    height: 100px;
+}
+
+.hover-sign::before,
+.hover-sign::after{
+    content: '👆';
+    text-align: center;
+    position: absolute;
+    font-size: 50px;
+    top: 20%;
+    left: 40%;
+    border-radius: 50%;
+    animation: hoverAnimation 4s ease-in-out infinite;
+}
+
+@keyframes hoverAnimation{
+    0%{
+        box-shadow: 0 0 5px lightgray;
+        transform: translate(100%,50%) rotate(30deg);
+    }
+    50%{
+        box-shadow: 0 0 5px lightgray;
+        transform: translate(50%,30%) rotate(0deg);
+    }
+    100%{
+        box-shadow: 0 0 5px lightgray;
+        transform: translate(100%,50%) rotate(30deg);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
 
 
 
