--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
     background-color: #001f7c38;
 }
 
+/* Header */
 .back-vid{
     position: fixed;
     right: 0;
@@ -113,6 +114,7 @@ header ul a{
     margin-top: -23.5%;
 }
 
+/* Front Page */
 .hero{
     position: relative;
     display: flex;
@@ -243,6 +245,7 @@ header ul a{
     }
 }
 
+/* About */
 .info-section{
     display: flex;
     flex-direction: column;
@@ -254,6 +257,7 @@ header ul a{
 .section-title{
     font-size: 40px;
     font-weight: 700;
+    text-align: center;
 }
 
 .info-cards{
@@ -367,7 +371,7 @@ header ul a{
     bottom: 35%;
 }
 
-
+/* Projects */
 .my-projects{
     display: flex;
     flex-direction: column;
@@ -495,19 +499,125 @@ header ul a{
     }
 }
 
+/* Skills */
+.skills-section{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
 
+.skills-box{
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    align-items: start;
+    justify-content: center;
+}
 
+.skills-image{
+    width: 70%;
+    mix-blend-mode: lighten;
+    opacity: 0.7;
+}
 
+.designer{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    top: 25%;
+    left: 5%;
+    max-width: 300px;
+}
 
+.coder{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    top: 25%;
+    right: 5%;
+    max-width: 300px;
+}
 
+.skills-box h1{
+    font-size: 50px;
+    display: flex;
+    align-items: center;
+}
 
+.skills-box p{
+    line-height: 23px;
+}
 
+.slider {
+    position: absolute;
+    bottom: 5%;
+    right: 20%;
+    width: 60%;
+    height: calc(var(--height) + 50px);
+    overflow: hidden;
+    mask-image: linear-gradient(
+        to right,
+        transparent,
+        #000 10% 90%,
+        transparent
+    );
+    mix-blend-mode: difference;
+    opacity: 0.8;
+}
 
+.slider .list {
+    display: flex;
+    width: 100%;
+    min-width: calc(var(--width) * var(--quantity));
+    position: relative;
+}
 
+.slider .list .item{
+    width: var(--width);
+    height: var(--height);
+    position: absolute;
+    left: 100%;
+    animation: autorun 10s linear infinite;
+    transition: filter 1s;
+    animation-delay: calc((10s / var(--quantity)) * (var(--position) - 1) - 10s)!important;
+}
 
+.list .item img{ 
+    width: 100%;
+    animation: floatUpDown 3s ease-in-out infinite;
+}
 
+@keyframes autorun{
+    from{
+        left: 100%;
+    }
+    to{
+        left: calc(var(--width) * -1);
+    }
+}
 
+@keyframes floatUpDown {
+    0% {
+        transform: translateY(0);
+    }
+    50% {
+        transform: translateY(-10px);
+    }
+    100% {
+        transform: translateY(0);
+    }
+}
+.slider:hover .item{
+    animation-play-state: paused !important;
+    filter: grayscale(1);
+}
 
+.slider .item:hover{
+    filter: grayscale(0);
+}
 
 
 
