--- a/style.css
+++ b/style.css
@@ -403,7 +403,7 @@ header ul a{
     width: 50%;
     position: relative;
     cursor: pointer;
-    min-height: 400px;
+    min-width: 400px;
     transition: 0.5s;
     mix-blend-mode: exclusion;
 }
@@ -718,6 +718,94 @@ footer h1{
     font-size: 20px;
 }
 
+.menu-icon{
+    font-size: 35px;
+    cursor: pointer;
+    display: none;
+}
+
+.sidebar{
+    position: fixed;
+    right: 0;
+    top: 0;
+    bottom: 70%;
+    width: 0;
+    background-color: #000000b8;
+    backdrop-filter: blur(10px);
+    z-index: 999;
+    box-shadow: 0 0 20px rgba(211, 211, 211, 0.411);
+    border-bottom-left-radius: 100%;
+    opacity: 0;
+}
+
+.close-icon{
+    font-size: 50px;
+    color: lightgray;
+    cursor: pointer;
+    padding-left: 10px;
+}
+
+.sidebar ul{
+    padding-left: 20px;
+}
+
+.sidebar ul li{
+    list-style: none;
+    margin-bottom: 30px;
+}
+
+.sidebar ul li a{
+    text-decoration: none;
+    color: lightgray;
+    font-size: 30px;
+    font-weight: 700;
+    text-shadow: 0 0 15px rgba(128, 128, 128, 0.256);
+}
+
+.sidebar .social-icons{
+    margin-top: 60px;
+    text-wrap: nowrap;
+    padding-left: 20px;
+}
+
+.sidebar .social-icons a{
+    font-size: 35px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+.sidebar.open-sidebar{
+    animation: openSidebarAnimation 1.5s forwards;
+}
+
+@keyframes openSidebarAnimation{
+    to{
+        width: 80%;
+        opacity: 1;
+        bottom: 0;
+        border-radius: 0;
+    }
+}
+
+.sidebar.close-sidebar{
+    animation: closeSidebarAnimation 1.5s forwards;
+}
+
+@keyframes closeSidebarAnimation{
+    from{
+        width: 80%;
+        opacity: 1;
+        bottom: 0;
+        border-radius: 0;
+    }
+    to{
+        width: 0;
+        opacity: 0;
+        bottom: 70%;
+        border-bottom-left-radius: 50%;
+    }
+}
+
 /* Scroll Effects */
 .autoBlur{
     animation: autoBlurAnimation linear both;
@@ -788,5 +876,233 @@ footer h1{
     .back-vid{
         width: 100%;
         height: auto;
+    }
+}
+
+@media screen and (max-width:1150px){
+    .blackhole-box{
+        margin-top: -20%;
+    }
+    
+    .hero-info h1{
+        font-size: 40px;
+        line-height: 40px;
+        max-width: 400px;
+    }
+
+    .hero-info p{
+        max-width: 300px;
+    }
+
+    .hero-vid-box{
+        right: 0;
+    }
+
+    .hero-vid-box video{
+        height: 500px;
+    }
+
+    .section-title{
+        font-size: 30px;
+    }
+
+    .info-cards{
+        grid-template-columns: auto;
+    }
+
+    .card:nth-child(3){
+        grid-column: span 2;
+        height: 70vh;
+    }
+
+    .info-cards .card h1{
+        font-size: 20px;
+    }
+
+    .card:nth-child(3) h1{
+        bottom: 25%;
+    }
+
+    .card video{
+        height: 65%;
+        margin-top: 5%;
+    }
+
+    .my-projects{
+        margin-bottom: 300px;
+    }
+
+    .project-vidbox video{
+        width: 250px;
+        margin-left: -100px;
+    }
+
+    .project-info{
+        padding-left: 0;
+        margin-left: -50px;
+    }
+
+    .project-info h1{
+        font-size: 20px;
+        max-width: 200px;
+        text-wrap: wrap;
+    }
+
+    .project-info p{
+        font-size: 10px;
+        max-width: 200px;
+        text-wrap: wrap;
+        min-height: 0;
+    }
+
+    footer h1{
+        font-size: 15px;
+    }
+}
+
+@media screen and (max-width: 700px){
+    header{
+        position: fixed;
+        height: 50px;
+    }
+
+    header ul{
+        display: none;
+    }
+
+    header .box-items{
+        display: none;
+    }
+
+    header h1{
+        font-size: 20px;
+    }
+
+    .blackhole-box video{
+        margin-top: -10px;
+    }
+
+    .hero{
+        flex-direction: column;
+    }
+
+    .autoBlur{
+        animation: none;
+    }
+
+    .hero-info{
+        bottom: 5%;
+    }
+
+    .scroll-down{
+        bottom: 5%;
+    }
+
+    .hero-info h1{
+        line-height: 50px;
+        font-size: 40px;
+    }
+
+    .hero-info h2{
+        line-height: 30px;
+        font-size: 25px;
+    }
+
+    .hero-info p{
+        line-height: 20px;
+        font-size: 15px;
+    }
+
+    .hero-vid-box{
+        display: flex;
+        justify-content: center;
+        height: 200px;
+        width: 100vw;
+        top: 5%;
+    }
+
+    .card video{
+        width: 100%;
+    }
+
+    .info-cards{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .my-projects{
+        margin-bottom: 600px;
+    }
+
+    .project-card{
+        flex-direction: column;
+        gap: 30px;
+        margin-left: 15%;
+        margin-bottom: 20px;
+    }
+
+    .project-info{
+        width: 85%;
+    }
+
+    .project-info h1{
+        text-wrap: nowrap;
+    }
+
+    .project-info p{
+        max-width: 300px;
+    }
+
+    .designer{
+        font-size: 20px;
+        top: 25%;
+        left: 18%;
+    }
+
+    .coder{
+        font-size: 20px;
+        top: 50%;
+        left: 18%;
+    }
+
+    .designer h1,
+    .coder h1{
+        font-size: 30px;
+    }
+
+    .skills-box h1{
+        margin-bottom: 0;
+        margin-top: 70px;
+    }
+
+    .slider{
+        bottom: 0;
+    }
+
+    .slider img{
+        width: 60%;
+    }
+
+    .contact-section{
+        flex-direction: column;
+        margin-top: 100px;
+        margin-bottom: 50px;
+    }
+
+    .contact-section h1{
+        top: -40px;
+        left: 25%;
+    }
+
+    footer h1{
+        font-size: 10px;
+    }
+
+    .project-vidbox{
+        min-width: 200px;
+    }
+
+    .menu-icon{
+        display: inline;
     }
 }
