--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
     margin: 0;
     font-family: "Montserrat", serif;
     color: lightgray;
-    background-color: #0c002e;
+    background-color: #0c002e3d;
 }
 
 html{
